--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "boilerplate-react-mono",
+  "name": "scaffold-react-mono",
   "private": true,
   "version": "0.0.0",
-  "license": "CC-BY-NC-SA-4.0",
+  "license": "MIT",
   "author": "Andy Willis",
   "engines": {
     "node": "^18"
